# test-double-practice

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
cmake/: compiler_warning.cmake  format.cmake  option.cmake  set_source.sh  source.cmake  static_analyzer.cmake  thirdparty.cmake
src/app/: main.cpp
src/lib/: door_command.cpp  door_command.h  i_alert.h  i_command.h  i_door.h  result.h  server.cpp  server.h
test/: dummy.cpp  fake.cpp  mock.cpp  spy.cpp  stub.cpp
